--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
     "typescript": "~4.1.5"
   }
 }
