--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "mitt": "^2.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "markdown-it": "^11.0.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
